Fix width of descriptions on collections/browse on mobile widths, adjust margins on exhibits/browse, restyle filters. (Fix #13)

--- a/css/sass/_768max.scss
+++ b/css/sass/_768max.scss
@@ -141,6 +141,14 @@ footer .navigation {
 
 /* @end */
 
+/* @group ----- Collections/Browse ----- */
+
+.collection-meta {
+    width: 100%;
+}
+
+/* @end */
+
 /* @group ----- Exhibits/Show ----- */
 
 .exhibit {
