--- a/css/sass/_screen.scss
+++ b/css/sass/_screen.scss
@@ -908,7 +908,7 @@ ul.title-list {
 
 /* @group ----- Collections/Browse ----- */
 
-.browse .collection,
+.browse .collection.record,
 .browse .exhibit {
     clear: both;
     border-bottom: 1px solid #eee;
@@ -939,7 +939,7 @@ ul.title-list {
 .browse .exhibit h2 {
     @include columns(4);
     @include alpha;
-    margin: 0;
+    margin: 0 0 rhythm(1, 2 * $base-font-size);
     max-width: 100%;
 }
 
@@ -1021,14 +1021,14 @@ ul.title-list {
 #item-filters ul, #search-filters ul {
     padding-left: 0;
     list-style-type: none;
+    border-bottom: 1px solid #eee;
+    margin: rhythm(-.5) 0 0;
 
     & > li {
         display: inline-block;
-
-        &:after {
-            content: " \00B7";
-            margin: 0 10px 0 5px;
-        }
+        background-color: #eee;
+        padding: rhythm(.25) rhythm(.5);
+        margin: 0 rhythm(.5) rhythm(.5) 0;
     }
 
     & > li:last-child:after { content: "\00A0"; }
@@ -1159,6 +1159,11 @@ footer {
     & > ul > li.current ul {
         display: block;
     }
+}
+
+.secondary-nav + .exhibit {
+    border-top: 0;
+    padding-top: 0;
 }
 
 #exhibit-pages ul ul {
