--- a/css/style.css
+++ b/css/style.css
@@ -1573,7 +1573,7 @@ ul.title-list {
 
 /* @end */
 /* @group ----- Collections/Browse ----- */
-.browse .collection,
+.browse .collection.record,
 .browse .exhibit {
   clear: both;
   border-bottom: 1px solid #eee;
@@ -1581,11 +1581,11 @@ ul.title-list {
   width: 100%;
   padding-top: 1.5em;
 }
-.browse .collection .view-items-link,
+.browse .collection.record .view-items-link,
 .browse .exhibit .view-items-link {
   margin-bottom: 2.25em;
 }
-.browse .collection h3,
+.browse .collection.record h3,
 .browse .exhibit h3 {
   margin: 0;
 }
@@ -1616,7 +1616,7 @@ ul.title-list {
   margin-right: 10px;
   width: 220px;
   margin-left: 0;
-  margin: 0;
+  margin: 0 0 0.75em;
   max-width: 100%;
 }
 @media only screen and (max-width: 767px) {
@@ -1743,13 +1743,14 @@ ul.title-list {
 #item-filters ul, #search-filters ul {
   padding-left: 0;
   list-style-type: none;
+  border-bottom: 1px solid #eee;
+  margin: -0.75em 0 0;
 }
 #item-filters ul > li, #search-filters ul > li {
   display: inline-block;
-}
-#item-filters ul > li:after, #search-filters ul > li:after {
-  content: " \00B7";
-  margin: 0 10px 0 5px;
+  background-color: #eee;
+  padding: 0.375em 0.75em;
+  margin: 0 0.75em 0.75em 0;
 }
 #item-filters ul > li:last-child:after, #search-filters ul > li:last-child:after {
   content: "\00A0";
@@ -1897,6 +1898,11 @@ footer nav + p {
 }
 #exhibit-pages > ul > li.current ul {
   display: block;
+}
+
+.secondary-nav + .exhibit {
+  border-top: 0;
+  padding-top: 0;
 }
 
 #exhibit-pages ul ul {
@@ -2180,6 +2186,12 @@ footer nav + p {
 
   #sort-links {
     float: left;
+  }
+
+  /* @end */
+  /* @group ----- Collections/Browse ----- */
+  .collection-meta {
+    width: 100%;
   }
 
   /* @end */
